--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="frameWorks/bootstrap-4.3.1/dist/css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!--Personal CSS-->
     <link href="css.css" rel="stylesheet" type="text/css" />
@@ -27,37 +27,37 @@
     <div class="container-fluid wrapper rounded">
         <h3 id="header"><span class="lineAtText"> &nbsp Documents &nbsp </span></h3>
         <div class="row rounded">
-            <img class="imageParams" src="https://cdn2.iconfinder.com/data/icons/technology-filled-line-1/64/folder-data-file-digital-512.png">
+            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/regulations.png">
             <button type="button" class="btn btn-secondary btn-sm">Regulations & References</button>
         </div>
 
         <div class="row rounded">
-            <img class="imageParams" src="https://cdn2.iconfinder.com/data/icons/technology-filled-line-1/64/folder-data-file-digital-512.png">
+            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/only%20for%20USA.png">
             <button type="button" class="btn btn-secondary btn-sm">US ONLY Briefs</button>
         </div>
 
         <div class="row rounded">
-            <img class="imageParams" src="https://cdn2.iconfinder.com/data/icons/technology-filled-line-1/64/folder-data-file-digital-512.png">
+            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/TMT.png">
             <button type="button" class="btn btn-secondary btn-sm">TMT's of Interest</button>
         </div>
 
         <div class="row rounded">
-            <img class="imageParams" src="https://cdn2.iconfinder.com/data/icons/technology-filled-line-1/64/folder-data-file-digital-512.png">
+            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/CRR.png">
             <button type="button" class="btn btn-secondary btn-sm">CRR PAGE</button>
         </div>
 
         <div class="row rounded">
-            <img class="imageParams" src="https://cdn2.iconfinder.com/data/icons/technology-filled-line-1/64/folder-data-file-digital-512.png">
+            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/Calendar%20Icon.png">
             <button type="button" class="btn btn-secondary btn-sm">Calendar</button>
         </div>
 
         <div class="row rounded">
-            <img class="imageParams" src="https://cdn2.iconfinder.com/data/icons/technology-filled-line-1/64/folder-data-file-digital-512.png">
+            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/tbd.jpg">
             <button type="button" class="btn btn-secondary btn-sm">TBD</button>
         </div>
 
         <div class="row rounded">
-            <img class="imageParams" src="https://cdn2.iconfinder.com/data/icons/technology-filled-line-1/64/folder-data-file-digital-512.png">
+            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/Links.jpg">
             <button type="button" class="btn btn-secondary btn-sm">Links of Interest</button>
         </div>
     </div>
@@ -67,9 +67,9 @@
 
 
     <!--Links to Frameworks-->
-    <script type="text/javascript" src="FrameWorks/jQuery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="FrameWorks/bootstrap-4.3.1/dist/js/bootstrap.bundle.js"></script>
-    <script type="text/javascript" src="FrameWorks/bootstrap-4.3.1/dist/js/bootstrap.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!--Personal JS-->
     <script type="text/javascript" src="js.js"></script>
