--- a/index.html
+++ b/index.html
@@ -24,41 +24,82 @@
 </head>
 
 <body>
-    <div class="container-fluid wrapper rounded">
-        <h3 id="header"><span class="lineAtText"> &nbsp Documents &nbsp </span></h3>
-        <div class="row rounded">
-            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/regulations.png">
-            <button type="button" class="btn btn-secondary btn-sm">Regulations & References</button>
+    <div class="row">
+        <div class="container-fluid wrapper rounded">
+            <h3 id="header"><span class="lineAtText"> &nbsp Documents &nbsp </span></h3>
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/regulations.png">
+                <button type="button" class="btn btn-secondary btn-sm">Regulations & References</button>
+            </div>
+
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/only%20for%20USA.png">
+                <button type="button" class="btn btn-secondary btn-sm">US ONLY Briefs</button>
+            </div>
+
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/TMT.png">
+                <button type="button" class="btn btn-secondary btn-sm">TMT's of Interest</button>
+            </div>
+
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/CRR.png">
+                <button type="button" class="btn btn-secondary btn-sm">CRR PAGE</button>
+            </div>
+
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/Calendar%20Icon.png">
+                <button type="button" class="btn btn-secondary btn-sm">Calendar</button>
+            </div>
+
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/tbd.jpg">
+                <button type="button" class="btn btn-secondary btn-sm">TBD</button>
+            </div>
+
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/Links.jpg">
+                <button type="button" class="btn btn-secondary btn-sm">Links of Interest</button>
+            </div>
         </div>
 
-        <div class="row rounded">
-            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/only%20for%20USA.png">
-            <button type="button" class="btn btn-secondary btn-sm">US ONLY Briefs</button>
-        </div>
+        <!--Countries-->
+        <div class="container-fluid wrapper rounded">
+            <h3 id="header"><span class="lineAtText"> &nbsp Documents &nbsp </span></h3>
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/regulations.png">
+                <button type="button" class="btn btn-secondary btn-sm">Country 1</button>
+            </div>
 
-        <div class="row rounded">
-            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/TMT.png">
-            <button type="button" class="btn btn-secondary btn-sm">TMT's of Interest</button>
-        </div>
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/only%20for%20USA.png">
+                <button type="button" class="btn btn-secondary btn-sm">Country 2</button>
+            </div>
 
-        <div class="row rounded">
-            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/CRR.png">
-            <button type="button" class="btn btn-secondary btn-sm">CRR PAGE</button>
-        </div>
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/TMT.png">
+                <button type="button" class="btn btn-secondary btn-sm">Country 3</button>
+            </div>
 
-        <div class="row rounded">
-            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/Calendar%20Icon.png">
-            <button type="button" class="btn btn-secondary btn-sm">Calendar</button>
-        </div>
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/CRR.png">
+                <button type="button" class="btn btn-secondary btn-sm">Country 4</button>
+            </div>
 
-        <div class="row rounded">
-            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/tbd.jpg">
-            <button type="button" class="btn btn-secondary btn-sm">TBD</button>
-        </div>
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/Calendar%20Icon.png">
+                <button type="button" class="btn btn-secondary btn-sm">Country 5</button>
+            </div>
 
-        <div class="row rounded">
-            <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/Links.jpg">
-            <button type="button" class="btn btn-secondary btn-sm">Links of Interest</button>
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/tbd.jpg">
+                <button type="button" class="btn btn-secondary btn-sm">Country 6</button>
+            </div>
+
+            <div class="row rounded">
+                <img class="imageParams" src="https://external.bwfed.com/programs/ccj3/devs/Test%20Images/Links.jpg">
+                <button type="button" class="btn btn-secondary btn-sm">Country 7</button>
+            </div>
         </div>
     </div>
     
