with mission statement

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
 <body>
     <div class="row">
+        <div class="mission_statement">
+            <p>Here is where the mission statement will go. I am just filling in this paragraph with giberish.
+                Hopefully this will fill enough of the page to look decent. I do like the letter spacing that
+                for sure! I will be interested to see what this looks like on sharepoint.
+            </p>
+        </div>
         <div class="container-fluid wrapper rounded">
             <h3 id="header"><span class="lineAtText"> &nbsp Documents &nbsp </span></h3>
             <div class="row rounded">
