final for the day

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="row padDaTop">
         <div class="mission_statement">
             <p>Here is where the mission statement will go. I am just filling in this paragraph with giberish.
                 Hopefully this will fill enough of the page to look decent. I do like the letter spacing that
